--- a/app/(web)/globals.css
+++ b/app/(web)/globals.css
@@ -2,19 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.stripes {
-    height: 250px;
-    width: 375px;
-    -webkit-background-size: 50px 50px;
-    -moz-background-size: 50px 50px;
-    background-size: 50px 50px;
+.pixelated-image-canvas {
+    max-height: 39vh;
+    max-width: 26vh;
 }
-.deg45 {
-    background-color: white;
-    background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, gray), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, gray), color-stop(.75, gray), color-stop(.75, transparent), to(transparent));
-    background-image: -webkit-linear-gradient(-45deg, gray 25%, transparent 25%, transparent 50%, gray 50%, gray 75%, transparent 75%, transparent);
-    background-image: -moz-linear-gradient(-45deg, gray 25%, transparent 25%, transparent 50%, gray 50%, gray 75%, transparent 75%, transparent);
-    background-image: -ms-linear-gradient(-45deg, gray 25%, transparent 25%, transparent 50%, gray 50%, gray 75%, transparent 75%, transparent);
-    background-image: -o-linear-gradient(-45deg, gray 25%, transparent 25%, transparent 50%, gray 50%, gray 75%, transparent 75%, transparent);
-    background-image: linear-gradient(-45deg, gray 25%, transparent 25%, transparent 50%, gray 50%, gray 75%, transparent 75%, transparent);
+
+@media (min-width: 768px) {
+    .pixelated-image-canvas {
+        max-height: 60vh;
+        max-width: 40vh;
+    }
 }
