--- a/app/(web)/globals.css
+++ b/app/(web)/globals.css
@@ -2,6 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    @apply h-screen;
+}
+
+body {
+    @apply flex flex-col min-h-full bg-screenidle-link text-white;
+}
+
+/* Navbar */
+
+.nav-section {
+    @apply border-b border-slate-400;
+}
+
+.nav-container {
+    @apply max-w-md p-4 mx-auto flex flex-row items-center justify-between md:max-w-screen-lg md:px-8;
+}
+
+.nav-brand {
+    @apply text-xl md:text-2xl
+}
+
+.nav-links {
+    @apply flex flex-row space-x-4 items-end;
+}
+
+.nav-link {
+    @apply inline-flex flex-row items-center space-x-2;
+}
+
+/* Header */
+
+.header-section {
+
+}
+
+.header-container {
+    @apply max-w-md p-4 mx-auto md:max-w-screen-lg md:px-8;
+}
+
+.header-title {
+    @apply text-2xl w-full text-center md:text-left md:text-3xl;
+}
+
+/* Footer */
+
+.footer-section {
+    @apply border-t border-slate-400;
+}
+
+.footer-container {
+    @apply max-w-md p-4 mx-auto flex flex-row items-center justify-center md:justify-start md:max-w-screen-lg md:px-8;
+}
+
+/* Homepage */
+
+.home-section {
+    @apply grow;
+}
+
+.home-container {
+    @apply container mx-auto max-w-screen-lg p-6 py-32 space-y-8 md:space-y-16 flex flex-col items-center justify-evenly;
+}
+
+.home-header{
+    @apply text-4xl font-bold md:text-8xl space-x-1 border-2 border-white p-8 rounded-lg;
+}
+
+.home-cta {
+    @apply text-lg bg-screenidle-success text-screenidle-link p-4 rounded-lg bg-gradient-to-r from-screenidle-warning to-screenidle-success border-2 border-white;
+}
+
 .pixelated-image-canvas {
     max-height: 39vh;
     max-width: 26vh;
