--- a/app/(web)/globals.css
+++ b/app/(web)/globals.css
@@ -24,6 +24,7 @@ body {
         width: 100%;
         height: 3px;
         background: linear-gradient(to right, #98FB98, #8b5cf6, #FF69B4);
+        z-index: 10;
     }
 }
 
@@ -70,6 +71,7 @@ body {
         height: 3px;
         background: linear-gradient(to right, #98FB98, #8b5cf6, #FF69B4);
         transform: translateX(-50%);
+        z-index: 10;
         /* Center the 100vw element */
     }
 }
@@ -92,19 +94,20 @@ body {
     @apply relative text-4xl font-bold md:text-8xl space-x-1 border-0 p-8 rounded-lg;
 
     &::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  padding: 3px; /* ✅ thickness of border */
-  border-radius: inherit;
-  background: linear-gradient(to right, #98FB98, #8b5cf6, #FF69B4);
-  -webkit-mask: 
-    linear-gradient(#fff 0 0) content-box, 
-    linear-gradient(#fff 0 0);
-  -webkit-mask-composite: xor;
-          mask-composite: exclude;
-  pointer-events: none;
-}
+        content: "";
+        position: absolute;
+        inset: 0;
+        padding: 3px;
+        /* ✅ thickness of border */
+        border-radius: inherit;
+        background: linear-gradient(to right, #98FB98, #8b5cf6, #FF69B4);
+        -webkit-mask:
+            linear-gradient(#fff 0 0) content-box,
+            linear-gradient(#fff 0 0);
+        -webkit-mask-composite: xor;
+        mask-composite: exclude;
+        pointer-events: none;
+    }
 }
 
 .home-cta {
